--- a/.github/workflows/BuildRemoteProfilePackage.yml
+++ b/.github/workflows/BuildRemoteProfilePackage.yml
@@ -2,7 +2,7 @@
 # installed with Helios 1.6.  If the commit contains the text
 # #patch then the patch level will be bumped.
 
-name: CreateHelios16
+name: CreateRemoteHelios16
 
 # Controls when the workflow will run
 on:
@@ -45,7 +45,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPO_OWNER: HeliosVirtualCockpit
-          DEFAULT_BUMP: 'patch'
+          DEFAULT_BUMP: 'none'
           INITIAL_VERSION: '0.0.0'
       - name: Check outputs
         run: |
@@ -94,51 +94,15 @@ jobs:
       - name: execute python script(s) to adjust the profile for remote Helios
         run: |
           echo "Removing Embedded Viewports because they are not 1:1"
-          python .github/workflows/AdjustRemoteProfile.py '${{ env.VEHICLE }}/Helios/Profiles/F-15E_${{ steps.bump_tag.outputs.tag }}_${{ env.AUTHOR }}.hpf' '.github/workflows/ControlsRemote.xml' '.github/workflows/BindingsRemote.xml' '.github/workflows/InterfacesRemote.xml' '${{ env.VEHICLE }}/Helios/Profiles/F-15E_${{ steps.bump_tag.outputs.tag }}_${{ env.AUTHOR }}_Remote.hpf'         
+          python .github/workflows/AdjustRemoteProfile.py '${{ env.VEHICLE }}/Helios/Profiles/F-15E_${{ steps.bump_tag.outputs.tag }}_${{ env.AUTHOR }}.hpf' '.github/workflows/ControlsRemote.xml' '.github/workflows/BindingsRemote.xml' '.github/workflows/InterfacesRemote.xml' '${{ env.VEHICLE }}/Helios/Profiles/F-15E_${{ steps.bump_tag.outputs.tag }}_${{ env.AUTHOR }}_Remote.hpf'
       - name: Package Files
         run: |
           mv ./${{ env.VEHICLE }}/Helios .
-          zip -r output/${{ env.AUTHOR }}_${{ env.VEHICLE }}_V${{ steps.bump_tag.outputs.tag }}.helios16 ./Profile16.json ./LICENSE ./*.md ./Helios/ -x ".git/*" ".github/*" "./Helios/Profiles/*.bak" "./Helios/Profiles/*.hply" "./Helios/Profiles/*_Remote.hpf"
           mv './Helios/Profiles/F-15E_${{ steps.bump_tag.outputs.tag }}_${{ env.AUTHOR }}.hpf' './Helios/Profiles/F-15E_${{ steps.bump_tag.outputs.tag }}_${{ env.AUTHOR }}_Local.hpf'         
           zip -r output/${{ env.AUTHOR }}_${{ env.VEHICLE }}_V${{ steps.bump_tag.outputs.tag }}_Remote.helios16 ./Profile16.json ./LICENSE ./*.md ./Helios/ -x ".git/*" ".github/*" "./Helios/Profiles/*.bak" "./Helios/Images/*.*" "./Helios/Profiles/*.hply" "./Helios/Profiles/*_Local.hpf"
-      - name: Local profile artefact creation
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ env.AUTHOR }} ${{ env.VEHICLECOMMONNAME }} V${{ steps.bump_tag.outputs.tag }} helios16 profile package
-          path: output/${{ env.AUTHOR }}_${{ env.VEHICLE }}_V${{ steps.bump_tag.outputs.tag }}.helios16
-          retention-days: 2
       - name: Remote profile artefact creation
         uses: actions/upload-artifact@v3
         with:
           name: ${{ env.AUTHOR }} ${{ env.VEHICLECOMMONNAME }} V${{ steps.bump_tag.outputs.tag }} remote helios16 profile (no images)
           path: output/${{ env.AUTHOR }}_${{ env.VEHICLE }}_V${{ steps.bump_tag.outputs.tag }}_Remote.helios16
           retention-days: 2
-      - name: Read About file
-        id: getAbout
-        run: |
-          echo "ABOUT<<EOF" >> $GITHUB_ENV
-          echo "$(cat './DOWNLOADING.md')" >> $GITHUB_ENV
-          echo "$(cat './${{ env.VEHICLECOMMONNAME }} - About this profile.md')" >> $GITHUB_ENV
-          echo "$(cat './README.md')" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ env.AUTHOR }} ${{ env.VEHICLECOMMONNAME }} V${{ steps.bump_tag.outputs.tag }}
-          body: ${{ env.ABOUT }}
-          draft: true
-          prerelease: false
-      - name: Upload Release Asset
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: output/${{ env.AUTHOR }}_${{ env.VEHICLE }}_V${{ steps.bump_tag.outputs.tag }}.helios16
-          asset_name: ${{ env.AUTHOR }} ${{ env.VEHICLECOMMONNAME }} V${{ steps.bump_tag.outputs.tag }} helios16
-          asset_content_type: application/zip
